--- a/index.html
+++ b/index.html
@@ -27,5 +27,7 @@
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis est eligendi iste libero nam, odit eius eos perferendis doloribus fugit optio labore asperiores accusantium explicabo voluptatum iure harum enim voluptate!
     </p>
+    <a href="index.html">Volver al inicio</a>
+    <a href="index.html">Volder</a>
 </body>
 </html>
